--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,14 +4,17 @@ export(reset_knmf_colours)
 export(scale_color_continuous_knmf)
 export(scale_color_discrete_knmf)
 export(scale_color_divergent)
+export(scale_color_ordinal_knmf)
 export(scale_color_sequential)
 export(scale_colour_continuous_knmf)
 export(scale_colour_discrete_knmf)
 export(scale_colour_divergent)
+export(scale_colour_ordinal_knmf)
 export(scale_colour_sequential)
 export(scale_fill_continuous_knmf)
 export(scale_fill_discrete_knmf)
 export(scale_fill_divergent)
+export(scale_fill_ordinal_knmf)
 export(scale_fill_sequential)
 export(theme_knmf)
 export(use_knmf_colours)
